[package]
name = "auto-tunnel"
version = "0.1.0"
edition = "2021"

[features]
default = ["unix"]
unix = ["server", "client"]
windows = ["client"]

server = ["dep:procfs"]
client = []

[dependencies]
tokio-tungstenite = { version = "0.23" }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

websocket = "0.27"
tracing = { version = "0.1", features = ["log"] }
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde-binary = "0.5"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
backoff = "0.4"
procfs = { version = "0.16", optional = true }

[profile.release]
debug = true
